--- a/src/layouts/layout.css
+++ b/src/layouts/layout.css
@@ -1,8 +1,18 @@
-html {
-    font-family: sans-serif;
+
+html{
+    overflow-x: hidden;
+
+}
+
+
+/* html {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
   }
+  ::-webkit-scrollbar { 
+    display: none; 
+}
+
   body {
     margin: 0;
   }
@@ -92,7 +102,6 @@ html {
   kbd,
   pre,
   samp {
-    font-family: monospace, monospace;
     font-size: 1em;
   }
   figure {
@@ -198,7 +207,6 @@ html {
   }
   body {
     color: hsla(0, 0%, 0%, 0.8);
-    font-family: georgia, serif;
     font-weight: normal;
     word-wrap: break-word;
     font-kerning: normal;
@@ -228,8 +236,6 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
     font-size: 2.25rem;
@@ -622,4 +628,4 @@ html {
       font-size: 100%;
     }
   }
-  
+   */
