--- a/src/components/icons/icons.css
+++ b/src/components/icons/icons.css
@@ -52,20 +52,20 @@
     color: #555;
     background: #fff;
   }
-  h1 {
+  /* h1 {
     font-size: 1.5em;
     font-weight: normal;
-  }
+  } */
   small {
     font-size: .66666667em;
   }
-  a {
+  /* a {
     color: #e74c3c;
     text-decoration: none;
   }
   a:hover, a:focus {
     box-shadow: 0 1px #e74c3c;
-  }
+  } */
   .bshadow0, input {
     box-shadow: inset 0 -2px #e7e7e7;
   }
